WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150565
id of iframe incorrectly sets window name
https://bugs.webkit.org/show_bug.cgi?id=150565
Summary
id of iframe incorrectly sets window name
Chris Dumez
Reported
2015-10-26 10:47:03 PDT
As per the specification, the iframe's name should be an empty string if unset:
http://www.whatwg.org/specs/web-apps/current-work/multipage/the-iframe-element.html#attr-iframe-name
Instead, WebKit is using the iframe's id as window name if the name is unset. Test case:
http://jsfiddle.net/xf5H7/9/
Firefox, IE and Chrome behave according to the specification. Blink commit:
https://src.chromium.org/viewvc/blink?revision=169803&view=revision
Attachments
Patch
(120.28 KB, patch)
2015-10-26 15:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-mavericks
(775.36 KB, application/zip)
2015-10-26 15:38 PDT
,
Build Bot
no flags
Details
Patch
(128.70 KB, patch)
2015-10-26 15:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-10-26 15:00:23 PDT
Created
attachment 264079
[details]
Patch
Build Bot
Comment 2
2015-10-26 15:38:48 PDT
Comment on
attachment 264079
[details]
Patch
Attachment 264079
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/341461
New failing tests: fast/frames/sandboxed-iframe-plugins.html http/tests/loading/redirect-methods.html http/tests/navigation/forward-and-cancel.html plugins/get-url-with-iframe-target.html webarchive/archive-empty-frame-source.html http/tests/security/cross-frame-access-protocol.html http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-sub-frame-2-level.html http/tests/security/cross-frame-access-protocol-explicit-domain.html
Build Bot
Comment 3
2015-10-26 15:38:52 PDT
Created
attachment 264082
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Chris Dumez
Comment 4
2015-10-26 15:51:33 PDT
Created
attachment 264086
[details]
Patch
WebKit Commit Bot
Comment 5
2015-10-27 21:40:52 PDT
Comment on
attachment 264086
[details]
Patch Clearing flags on attachment: 264086 Committed
r191652
: <
http://trac.webkit.org/changeset/191652
>
WebKit Commit Bot
Comment 6
2015-10-27 21:40:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug